--- a/css/styles.css
+++ b/css/styles.css
@@ -239,11 +239,11 @@ sup {
 }
 
 a {
-  color: #64a19d;
+  color: rgb(17, 17, 17);
   text-decoration: underline;
 }
 a:hover {
-  color: #50817e;
+  color: rgba(17, 17, 17, 0.75));
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -2995,9 +2995,75 @@ textarea.form-control-lg {
   z-index: 3;
 }
 
-.btn {
+.hvr-sweep {
+  text-decoration: none;
+  padding: 3rem 0 1rem 0;
+  font-weight: 600;
+  font-size: 110%;
+  color: rgb(17,17,17);
+  border-bottom: 3px solid rgb(17,17,17);
+  letter-spacing: 0.05rem;
+
   display: inline-block;
-  font-weight: 400;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  position: relative;
+  -webkit-transition-property: color;
+  -o-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.25s;
+  -o-transition-duration: 0.25s;
+  transition-duration: 0.25s;
+}
+.hvr-sweep:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #111;
+  -webkit-transform: scaleY(0);
+  -ms-transform: scaleY(0);
+  transform: scaleY(0);
+  -webkit-transform-origin: 50% 100%;
+  -ms-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+  -webkit-transition-property: transform;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  -o-transition-property: transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 0.25s;
+  -o-transition-duration: 0.25s;
+  transition-duration: 0.25s;
+  -webkit-transition-timing-function: ease-out;
+  -o-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-sweep:active,
+.hvr-sweep:focus,
+.hvr-sweep:hover {
+  opacity: 1;
+}
+.hvr-sweep:active:before,
+.hvr-sweep:focus:before,
+.hvr-sweep:hover:before {
+  -webkit-transform: scaleY(0.2);
+  -ms-transform: scaleY(0.2);
+  transform: scaleY(0.2);
+}
+
+.btn {
+  font-size: 110%;
+  letter-spacing: 0.15rem;
+  border-bottom: 3px solid rgb(17,17,17);
+  padding: 15px 0;
+  display: inline-block;
+  font-weight: 600;
   line-height: 1.5;
   color: #212529;
   text-align: center;
@@ -3009,11 +3075,7 @@ textarea.form-control-lg {
       -ms-user-select: none;
           user-select: none;
   background-color: transparent;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
   .btn {
@@ -3021,7 +3083,7 @@ textarea.form-control-lg {
   }
 }
 .btn:hover {
-  color: #212529;
+  border-bottom: 10px solid rgb(17,17,17);
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
@@ -3033,9 +3095,8 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #64a19d;
-  border-color: #64a19d;
+  color: #000;
+  margin-top: 2rem;
 }
 .btn-primary:hover {
   color: #fff;
@@ -6921,9 +6982,9 @@ textarea.form-control-lg {
   display: inline-flex !important;
 }
 
-.d-none {
+/* .d-none {
   display: none !important;
-}
+} */
 
 .shadow {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
@@ -11498,7 +11559,7 @@ body {
   outline: none;
 }
 #mainNav .navbar-brand {
-  color: #000;
+  color: black;
   font-weight: 700;
   padding: 0.9rem 0;
 }
@@ -11524,15 +11585,15 @@ body {
   }
   #mainNav .navbar-brand {
     padding: 0.5rem 0;
-    color: rgba(255, 255, 255, 0.5);
+    color: black;
   }
   #mainNav .nav-link {
     transition: none;
     padding: 2rem 1.5rem;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgb(17, 17, 17);
   }
   #mainNav .nav-link:hover {
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(17, 17, 17, 0.75);
   }
   #mainNav .nav-link:active {
     color: #fff;
@@ -11561,23 +11622,13 @@ body {
   }
 }
 
-.btn {
-  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
-  padding: 1.25rem 2rem;
-  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 80%;
-  text-transform: uppercase;
-  letter-spacing: 0.15rem;
-  border: 0;
-}
-
 .masthead {
   position: relative;
   width: 100%;
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/bg-masthead.jpg");
+  background: url("../assets/img/bg_main.png");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11664,7 +11715,7 @@ body {
   filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.15)) drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.35));
 }
 
-.signup-section {
+/* .signup-section {
   padding: 10rem 0;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url("../assets/img/bg-signup.jpg");
   background-position: center;
@@ -11681,7 +11732,7 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.15rem;
   border: 0;
-}
+} */
 
 .contact-section {
   padding-top: 5rem;
