--- a/css/styles.css
+++ b/css/styles.css
@@ -10912,10 +10912,10 @@ body {
 }
 
 .projects-section .featured-text-right {
-  padding: 0 0 0 2rem;
+  padding: 0 0 0 4rem;
 }
 .projects-section .featured-text-left {
-  padding: 0 1.5rem 0 0;
+  padding: 0 4rem 0 0;
 }
 
 @media (max-width: 991.98px) {
@@ -11022,7 +11022,7 @@ body {
   filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.25)) drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.35)); 
 }
 
-.UXCaseImg-right {
+/* .UXCaseImg-right {
   padding-left: 60px;
 }
 
@@ -11034,7 +11034,7 @@ body {
   .UXCaseImg-left, .UXCaseImg-right {
     padding: 0px !important;
   }
-}
+} */
 
 .UXCaseLabel {
   display: flex;
