--- a/css/styles.css
+++ b/css/styles.css
@@ -11038,7 +11038,7 @@ p.UXCaseLabel {
   align-items: center;
 }
 
-p..UXCaseTag {
+p.UXCaseTag {
   color: #9D9D9D;
   border: 1px solid #9D9D9D;
   font-family: Lato;
