--- a/css/styles.css
+++ b/css/styles.css
@@ -10740,7 +10740,8 @@ body {
   color: var(--bs-gray-900);
   border: 1px solid var(--bs-gray-900);
 }
-#mainNav .navbar-toggler:focus {
+#mainNav .navbar-toggler:focus,
+#mainNav .nabar-toggler:active {
   outline: none;
   color: var(--bs-gray-500);
   border: 1px solid var(--bs-gray-200);
