Please please work

--- a/css/styles.css
+++ b/css/styles.css
@@ -10914,7 +10914,13 @@ body {
 }
 
 @media (max-width: 991.98px) {
- .projects-section .featured-text {
+ .projects-section .featured-text-left {
+    padding: 0 0 0 0 !important;
+  }
+}
+
+@media (max-width: 991.98px) {
+ .projects-section .featured-text-right {
     padding: 0 0 0 0 !important;
   }
 }
