--- a/css/styles.css
+++ b/css/styles.css
@@ -10914,14 +10914,14 @@ body {
 }
 
 @media (max-width: 992px) {
- .projects-section .featured-text-left {
-    padding: 0 0 0 0 !important
+  .featured-text-left {
+    padding: 0 !important,
   }
 }
 
 @media (max-width: 992px) {
- .projects-section .featured-text-right {
-    padding: 0 0 0 0 !important
+  .featured-text-right {
+    padding: 0 !important,
   }
 }
 
