the fucking comma vs semi-colon

--- a/css/styles.css
+++ b/css/styles.css
@@ -10915,13 +10915,13 @@ body {
 
 @media (max-width: 992px) {
   .featured-text-left {
-    padding: 0 !important,
+    padding: 0 !important;
   }
 }
 
 @media (max-width: 992px) {
   .featured-text-right {
-    padding: 0 !important,
+    padding: 0 !important;
   }
 }
 
