testing case title change

--- a/css/styles.css
+++ b/css/styles.css
@@ -11334,7 +11334,7 @@ div.UXCaseLabel {
   background-color: lightgray;
 }
 
-/* .openingtitles {
+.openingtitles {
   display: block;
   margin-top: -16px;
   -webkit-box-orient: vertical;
